@@ -1,3 +1,13 @@
+2005-01-28  Dan Winship  <danw@novell.com>
+
+	* glib/Object.cs (AddNotification, RemoveNotification): methods to
+	subscribe to the "notify" signal (with property details). [#71684]
+
+	* glib/GLibSharp.voidObjectIntPtrSignal.cs: autogenerated, for
+	notifications
+
+	* glib/NotifyHandler.cs: sort of autogenerated
+
 2005-01-28  Mike Kestner  <mkestner@novell.com>
 
 	* gtk/Dialog.custom : add a params array for button info to the ctor.
